--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>IKT-PWA-News</title>
   <link rel="stylesheet" href="/src/css/app.css">
+  <link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
 <div class="col-md-8 py-5 px-3 mx-auto">
